# daily-focus

./: .gitignore
.github/workflows/: build-windows.yml
src/: app.css  app.js  index.html  page.css  page.html  pages_browser.css  pages_browser.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
